--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Ogollah Vincent
+#logo: 
+#descriptiuon: An aspiring foresight consultant
+#show_downloads: true
+theme: jekyll-theme-minimal
